// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: all alarms 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "ScopeTestDummyApiErrorCountWarning11BE36AF": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error count is too high.",
        "AlarmName": "Test-DummyApi-Error-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4XX Error",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.02,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiErrorRateWarningD181D1C6": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error rate is too high.",
        "AlarmName": "Test-DummyApi-Error-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4XX Error (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.01,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiFaultCountWarning6270BEC0": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault count is too high.",
        "AlarmName": "Test-DummyApi-Fault-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5XX Fault",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiFaultRateWarning63CFB7F0": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault rate is too high.",
        "AlarmName": "Test-DummyApi-Fault-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5XX Fault (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiLatencyP50Warning7EEB3E57": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P50 latency is too high.",
        "AlarmName": "Test-DummyApi-Latency-P50-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P50",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "p50",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 110,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiLatencyP90Warning48639A66": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P90 latency is too high.",
        "AlarmName": "Test-DummyApi-Latency-P90-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P90",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "p90",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 220,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiLatencyP99Warning254DA12C": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P99 latency is too high.",
        "AlarmName": "Test-DummyApi-Latency-P99-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 330,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiMaxTPSWarning62732F2B": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "TPS is too high.",
        "AlarmName": "Test-DummyApi-MaxTPS-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Expression": "FILL(requests,0) / PERIOD(requests)",
            "Id": "expr_1",
            "Label": "TPS",
          },
          Object {
            "Id": "requests",
            "Label": "Requests",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 100,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiMinTPSWarning4E8DB4D0": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "TPS is too low.",
        "AlarmName": "Test-DummyApi-MinTPS-Warning",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Expression": "FILL(requests,0) / PERIOD(requests)",
            "Id": "expr_1",
            "Label": "TPS",
          },
          Object {
            "Id": "requests",
            "Label": "Requests",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "GraphQLAPIId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "testHttpApiC57B300F",
                        "ApiId",
                      ],
                    },
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/AppSync",
              },
              "Period": 300,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testHttpApiC57B300F": Object {
      "Properties": Object {
        "AuthenticationType": "API_KEY",
        "Name": "DummyApi",
      },
      "Type": "AWS::AppSync::GraphQLApi",
    },
    "testHttpApiDefaultApiKey3EF156CA": Object {
      "DependsOn": Array [
        "testHttpApiSchemaDBC6E366",
      ],
      "Properties": Object {
        "ApiId": Object {
          "Fn::GetAtt": Array [
            "testHttpApiC57B300F",
            "ApiId",
          ],
        },
      },
      "Type": "AWS::AppSync::ApiKey",
    },
    "testHttpApiSchemaDBC6E366": Object {
      "Properties": Object {
        "ApiId": Object {
          "Fn::GetAtt": Array [
            "testHttpApiC57B300F",
            "ApiId",
          ],
        },
        "Definition": "",
      },
      "Type": "AWS::AppSync::GraphQLSchema",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test: no alarms 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "testHttpApiC57B300F": Object {
      "Properties": Object {
        "AuthenticationType": "API_KEY",
        "Name": "DummyApi",
      },
      "Type": "AWS::AppSync::GraphQLApi",
    },
    "testHttpApiDefaultApiKey3EF156CA": Object {
      "DependsOn": Array [
        "testHttpApiSchemaDBC6E366",
      ],
      "Properties": Object {
        "ApiId": Object {
          "Fn::GetAtt": Array [
            "testHttpApiC57B300F",
            "ApiId",
          ],
        },
      },
      "Type": "AWS::AppSync::ApiKey",
    },
    "testHttpApiSchemaDBC6E366": Object {
      "Properties": Object {
        "ApiId": Object {
          "Fn::GetAtt": Array [
            "testHttpApiC57B300F",
            "ApiId",
          ],
        },
        "Definition": "",
      },
      "Type": "AWS::AppSync::GraphQLSchema",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
